src/app.css
:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  --h: 80;
  --c: .005;
  --b0: oklch(0.00 var(--c) var(--h)); /* just in case */
  --b1: oklch(0.16 var(--c) var(--h)); /* base color */
  --b2: oklch(0.24 var(--c) var(--h));
  --b3: oklch(0.36 var(--c) var(--h));
  --b4: oklch(0.48 var(--c) var(--h)); /* borders, dividers, lines */
  --b5: oklch(0.60 var(--c) var(--h)); /* icons, symbols */
  --b6: oklch(0.72 var(--c) var(--h));
  --b7: oklch(0.84 var(--c) var(--h)); /* primary text, selected icon */

  --highlight: var(--b7);
  --line: var(--b4);
  --border: 1px solid var(--b4);
  background-color: var(--b1);
  color: var(--b7);

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  --public: rgb(135, 154, 57);
  --private: rgb(209, 77, 65);
  --closed: rgb(87, 86, 83);
}

.text-0 { color: var(--b0); }
.text-1 { color: var(--b1); }
.text-2 { color: var(--b2); }
.text-3 { color: var(--b3); }
.text-4 { color: var(--b4); }
.text-5 { color: var(--b5); }
.text-6 { color: var(--b6); }
.text-7 { color: var(--b7); }

* {
  box-sizing: border-box;
}

.error {
  padding: 2rem;
  color: oklch(from var(--b6) l .09 40);
}
a {
  color: inherit;
  font-weight: 500;
  text-decoration: inherit;
}
a:focus, button:focus {
	outline: none;
	background: var(--b3);
	border-radius: 0.25rem;
	color: var(--b7);
  
}
html,
body {
  height: 100%;
  height: 100dvh;
  /* overflow: clip; */
  overflow: hidden;
  width: 100svw;
  overscroll-behavior-y: none;
&>div.content {
  min-height: 100%;
}

}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

button {
  border: 1px solid transparent;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: transparent;
  display: flex;
  justify-content: center;
  align-items: center;
  /* cursor: pointer; */
  transition: border-color 0.25s;
}

.btn {
  padding: 0.6em 1.2em;
  background-color: var(--b2);
  text-align: center;
  color: white;

  :hover {
    border-color: var(--b3);
		background-color: var(--b3);
  }
}

* {
  margin: 0;
}

button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

kbd {
  background: var(--b2); 
  padding: .25rem .5rem;
  margin-inline-start: .5rem;
  border-radius: .25rem;
}

.label, kbd {
	color: var(--b5);
		&:hover,
		&.selected {
			color: var(--b7);
		}
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #eeeeee;
  }

  button {
    background-color: #f9f9f9;
  }
}

